--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -894,6 +894,7 @@
   "update_beta_available": "Ai la dispoziţie o nouă versiune experimentală. Nu este recomandat să o instalezi dacă nu ştii ce faci.",
   "update_blockchain_downloading": "Blockchain-ul este încă în descărcare, verifică din nou după ce este actualizat.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Verificare de actualizare",
   "update_contact": "Actualizare Contact",
   "update_multiple_available": "Aveţi la dispoziţie o eliberare de versiuni generală şi experimentală. Nu este recomandat să instalaţi versiunea experimentală dacă nu ştiți ce faceți.",
   "update_testnet": "BRS nu poate fi actualizat în timp ce e conectat la testnet.",
