--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -894,6 +894,7 @@
   "update_beta_available": "Доступна новая эксперементальная версия. Не рекомендуется устанавливать, если вы не уверены.",
   "update_blockchain_downloading": "Blockchain еще загружается, проверьте еще раз после того, как он обновится.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Проверка обновления",
   "update_contact": "Обновить контакт",
   "update_multiple_available": "Доступны как основной, так и экспериментальный выпуски. Не рекомендуется устанавливать экспериментальный выпуск, если вы не знаете, что вы делаете.",
   "update_testnet": "BRS нельзя обновить при подключении к тестовой сети.",
