--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -894,6 +894,7 @@
   "update_beta_available": "Hi ha una nova versió experimental. No es recomana que l'instal·leu llevat de que sapigueu el què esteu fent.",
   "update_blockchain_downloading": "La Cadena de Blocs s'està descarregant, torni a provar quan estigui actualitzada.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Actualització de la comprovació",
   "update_contact": "Actualitzar Contacte",
   "update_multiple_available": "Hi ha disponible una versió general i una experimental. No és recomanable que instal·leu la versió experimental llevat que sapigueu el què esteu fent.",
   "update_testnet": "No es pot actualitzar el BRS i al mateix temps estar connectat a la Testnet.",
