--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -894,6 +894,7 @@
   "update_beta_available": "Нова експериментална верзија је доступна. Нине препоручено да је инсталирате уколико не знате шта радите.",
   "update_blockchain_downloading": "Blockchain је још увек у фази учитавања, проверите поново након завршетка процеса.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Ажурирање провера",
   "update_contact": "Ажурирај Контакт",
   "update_multiple_available": "Доступне су обе верзије, основна и експериментална. Није препоручљива инсталација експерименталне верзије уколико нисте сигурни шта радите.",
   "update_testnet": "BRS није могуће ажурирати док је спојен на тестнет.",
