--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -894,6 +894,7 @@
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Güncelleme kontrolü",
   "update_contact": "Kişi Güncelleştir",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
