changed platform label, and added more translations

--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -56,7 +56,7 @@
   "application": "Anwendung",
   "arbitrary_message": "Beliebige Nachricht",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Verkaufsorder",
+  "ask_order": "Bestellung erfragen",
   "ask_order_cancellation": "Verkaufsorder stornieren",
   "ask_order_id": "Verkaufsorder-ID",
   "ask_order_placement": "Verkaufsorder erstellen",
@@ -135,9 +135,12 @@
   "clear_results": "Ergebnisse löschen",
   "clear_search_results": "Suchergebnisse löschen",
   "click_for_changes": "Klicken Sie hier, um zu sehen, was sich geändert hat",
+  "click_for_other_platforms": "Klicken Sie hier, wenn Sie eine andere Plattform wünschen",
   "click_here_for_help": "Klicken Sie hier, um mehr darüber zu erfahren",
   "click_here_to_enable": "Klicken Sie zum Aktivieren hier.",
+  "click_to_apply": "Klicken Sie hier, um sich zu bewerben",
   "click_to_claim": "Klicken Sie hier, um Ihre kostenlosen Burst zu erhalten.",
+  "click_to_refresh": "Klicken Sie, um zu aktualisieren",
   "close": "Schließen",
   "comment": "Kommentar",
   "complete": "Abgeschlossen",
@@ -846,6 +849,7 @@
   "success_update_contact": "Der Kontakt wurde erfolgreich aktualisiert!",
   "success_valid_token": "Das Token ist gültig und gehört zum Konto __account_link__. Es wurde am __timestamp__ generiert.",
   "suggested_fee": "Vorgeschlagene Gebühren",
+  "suggested_fee_help": "Günstige Gebühr: 50% Chance-Transaktion schafft es in einem der nächsten zehn Blöcke. <br /> Standardgebühr: 50% Chance-Transaktion schafft es im nächsten Block. <br /> Prioritätsgebühr: 90% Chance-Transaktion schafft es es im nächsten Block und 99% innerhalb der nächsten zwei Blöcke zu machen.",
   "tags": "Tags",
   "tags_categories": "Tags (Kategorien)",
   "tentative": "Vorläufig",
