--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -135,6 +135,7 @@
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
   "click_for_changes": "Click here to see what has changed",
+  "click_for_other_platforms": "Click here, if you want another platform",
   "click_here_for_help": "Click here to know more about it",
   "click_here_to_enable": "Click here to enable it.",
   "click_to_apply": "Click to apply",
