--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -56,7 +56,7 @@
   "application": "Aplicación",
   "arbitrary_message": "Mensaje Arbitrario",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Orden de Venta",
+  "ask_order": "Pedir orden",
   "ask_order_cancellation": "Cancelar Orden de Venta",
   "ask_order_id": "ID de Orden de Venta",
   "ask_order_placement": "Colocar Orden de Venta",
@@ -135,9 +135,12 @@
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
   "click_for_changes": "Haga clic aquí para ver qué ha cambiado.",
+  "click_for_other_platforms": "Pincha aquí, si quieres otra plataforma.",
   "click_here_for_help": "Haga clic aquí para saber más sobre esto.",
   "click_here_to_enable": "Haga clic aquí para activarlo.",
+  "click_to_apply": "Haga clic para aplicar",
   "click_to_claim": "Haga clic aquí para reclamar su ráfaga libre.",
+  "click_to_refresh": "Haga clic para actualizar",
   "close": "Cerrar",
   "comment": "Comentario",
   "complete": "Completo",
@@ -846,6 +849,7 @@
   "success_update_contact": "¡El contacto se ha actualizado con éxito!",
   "success_valid_token": "El identificador es válido y pertenece a la cuenta __account_link__. Fue generado en __timestamp__.",
   "suggested_fee": "Tarifas sugeridas",
+  "suggested_fee_help": "Tarifa barata: el 50% de la transacción de oportunidad se realizará en uno de los siguientes diez bloques. <br /> Tarifa estándar: 50% de la transacción de oportunidad se realizará en el próximo bloque. <br /> Tarifa de prioridad: el 90% de la transacción de probabilidad hará en el siguiente bloque y 99% para hacer dentro de los próximos dos bloques.",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
