--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -56,7 +56,7 @@
   "application": "Application",
   "arbitrary_message": "Message arbitraire",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ordre de vente",
+  "ask_order": "Demande de commande",
   "ask_order_cancellation": "Annulation d'un ordre d'achat",
   "ask_order_id": "Identifiant de l'ordre d'achat",
   "ask_order_placement": "Placer un ordre d'achat",
@@ -135,11 +135,14 @@
   "clear_results": "Effacer les résultats",
   "clear_search_results": "Effacer les résultats de recherche",
   "click_for_changes": "Cliquez ici pour voir ce qui a changé",
+  "click_for_other_platforms": "Cliquez ici si vous voulez une autre plate-forme",
   "click_here_for_help": "Cliquez ici pour en savoir plus",
   "click_here_to_enable": "Cliquez ici pour l'activer.",
+  "click_to_apply": "Cliquez pour appliquer",
   "click_to_claim": "Cliquez ici pour réclamer votre rafale gratuite.",
+  "click_to_refresh": "Cliquez pour rafraîchir",
   "close": "Fermer",
-  "comment": "Commenter",
+  "comment": "Commentaire",
   "complete": "Compléter",
   "confirm_contact_delete": "Supprimer ce contact",
   "confirm_forging_start": "Confirmer le démarrage du forgeage",
@@ -846,6 +849,7 @@
   "success_update_contact": "Le contact a été mis à jour avec succès !",
   "success_valid_token": "Le jeton est valide et appartient au compte __account_link__. Il a été généré le __timestamp__.",
   "suggested_fee": "Frais suggérés",
+  "suggested_fee_help": "Frais bon marché: une transaction à 50% de chances de réussir dans l’un des dix blocs suivants. <br /> Frais standard: une transaction à 50% de chances de réussir dans le bloc suivant. <br /> Frais de priorité: à 90% de transaction dans le bloc suivant et 99% à faire dans les deux blocs suivants.",
   "tags": "Tags",
   "tags_categories": "Tags (catégories)",
   "tentative": "Provisoire",
