--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -56,7 +56,7 @@
   "application": "एप्लिकेशन",
   "arbitrary_message": "Arbitrary Message",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ask Order",
+  "ask_order": "आदेश पूछें",
   "ask_order_cancellation": "ऑर्डर रद्दीकरण से पूछो",
   "ask_order_id": "Ask Order ID",
   "ask_order_placement": "आदेश प्लेसमेंट से पूछो",
@@ -135,11 +135,14 @@
   "clear_results": "परिणामों को साफ़ करें",
   "clear_search_results": "खोज परिणामों को साफ़ करें",
   "click_for_changes": "जो बदल गया है उसे देखने के लिए यहां क्लिक करें",
+  "click_for_other_platforms": "अगर आपको दूसरा प्लेटफॉर्म चाहिए तो यहां क्लिक करें",
   "click_here_for_help": "इसके बारे में अधिक जानने के लिए यहां क्लिक करें",
   "click_here_to_enable": "इसे सक्षम करने के लिए यहाँ क्लिक करें।",
+  "click_to_apply": "आवेदन करने के लिए क्लिक करें",
   "click_to_claim": "अपने निःशुल्क बर्स्ट का दावा करने के लिए यहां क्लिक करें।",
+  "click_to_refresh": "ताज़ा करने के लिए क्लिक करें",
   "close": "बंद करें",
-  "comment": "Comment",
+  "comment": "टिप्पणी",
   "complete": "पूरा",
   "confirm_contact_delete": "हाँ, संपर्क हटाएँ",
   "confirm_forging_start": "फोर्जिंग प्रारंभ की पुष्टि करें",
@@ -846,6 +849,7 @@
   "success_update_contact": "The contact has been updated successfully!",
   "success_valid_token": "टोकन मान्य है और खाता __account_link__ के अंतर्गत आता है। यह __timestamp__ पर उत्पन्न किया गया था।",
   "suggested_fee": "सुझाई गई फीस",
+  "suggested_fee_help": "सस्ता शुल्क: 50% मौका लेनदेन इसे अगले दस ब्लॉकों में से एक बना देगा। <br /> मानक शुल्क: 50% मौका लेनदेन इसे अगले ब्लॉक में बनाएगा। <br /> प्राथमिकता शुल्क: 90% संभावना लेनदेन करेगा अगले ब्लॉक में और 99% अगले दो ब्लॉकों के भीतर बनाने के लिए।",
   "tags": "टैग",
   "tags_categories": "टैग (श्रेणियाँ)",
   "tentative": "आजमाइश",
