--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -56,7 +56,7 @@
   "application": "Aplikacija",
   "arbitrary_message": "Proizvoljna poruka",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Prodajni nalog",
+  "ask_order": "Pitajte red",
   "ask_order_cancellation": "Otkazivanje prodajnog naloga",
   "ask_order_id": "ID prodajnog naloga",
   "ask_order_placement": "Pozicija prodajnog naloga",
@@ -135,11 +135,14 @@
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
   "click_for_changes": "Kliknite ovdje da biste vidjeli što se promijenilo",
+  "click_for_other_platforms": "Kliknite ovdje, ako želite neku drugu platformu",
   "click_here_for_help": "Kliknite ovdje da biste saznali više o tome",
   "click_here_to_enable": "Kliknite ovdje za omogućavanje.",
+  "click_to_apply": "Kliknite da biste se prijavili",
   "click_to_claim": "Kliknite ovdje da biste zatražili vaš besplatni Burst.",
+  "click_to_refresh": "Kliknite za osvježavanje",
   "close": "Zatvori",
-  "comment": "Komentirajte",
+  "comment": "Komentar",
   "complete": "Gotovo",
   "confirm_contact_delete": "Da, obriši kontakt",
   "confirm_forging_start": "Potvrdite početak kovanja",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontakt je uspješno izmijenjen!",
   "success_valid_token": "Taj token je valjan i pripada računu __account_link__. Generiran je u __timestamp__.",
   "suggested_fee": "Predložene naknade",
+  "suggested_fee_help": "Jeftina naknada: 50% vjerojatnost da će se transakcija ostvariti u jednom od sljedećih deset blokova. <br /> Standardna naknada: 50% vjerojatnost transakcije će se ostvariti u sljedećem bloku. <br /> Prioritetna naknada: 90% vjerojatnost transakcije u sljedećem bloku i 99% u sljedeća dva bloka.",
   "tags": "Tagovi",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
