--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -56,7 +56,7 @@
   "application": "Aplicație",
   "arbitrary_message": "Mesaj arbitrar",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ordin vânzare",
+  "ask_order": "Cereți ordinul",
   "ask_order_cancellation": "Anulare Ordin Vânzare",
   "ask_order_id": "ID Ordin Vânzare",
   "ask_order_placement": "Plasează Ordin Vânzare",
@@ -135,11 +135,14 @@
   "clear_results": "Șterge rezultate",
   "clear_search_results": "Șterge Rezultate Căutare",
   "click_for_changes": "Faceți clic aici pentru a vedea ce sa schimbat",
+  "click_for_other_platforms": "Faceți clic aici, dacă doriți o altă platformă",
   "click_here_for_help": "Faceți clic aici pentru a afla mai multe despre el",
   "click_here_to_enable": "Click aici pentru activare.",
+  "click_to_apply": "Faceți clic pentru a aplica",
   "click_to_claim": "Faceți clic aici pentru a revendica explozia liberă.",
+  "click_to_refresh": "Faceți clic pentru a actualiza",
   "close": "Închidere",
-  "comment": "Comentariu",
+  "comment": "cometariu",
   "complete": "Complet",
   "confirm_contact_delete": "Da, şterge contactul",
   "confirm_forging_start": "Confirmă Start Forjare",
@@ -846,6 +849,7 @@
   "success_update_contact": "Persoana de contact a fost actualizată cu succes!",
   "success_valid_token": "Token-ul este valabil şi aparţine contului __account_link__. Acesta a fost generat la __timestamp__.",
   "suggested_fee": "Taxe recomandate",
+  "suggested_fee_help": "Taxă redusă: tranzacția cu șanse de 50% o va face într-unul din următoarele zece blocuri. <br /> Taxa standard: tranzacția cu șanse de 50% o va face în următorul bloc. <br /> Taxa de prioritate: în următorul bloc și 99% în următoarele două blocuri.",
   "tags": "Tags",
   "tags_categories": "Tag-uri (categorii)",
   "tentative": "Tentativă",
