--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -56,7 +56,7 @@
   "application": "Приложение",
   "arbitrary_message": "Произвольное сообщение",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Заявка на продажу",
+  "ask_order": "Задать вопрос",
   "ask_order_cancellation": "Отменить ордер на покупку",
   "ask_order_id": "ID ордера на покупку",
   "ask_order_placement": "Размещение ордера на покупку",
@@ -135,9 +135,12 @@
   "clear_results": "Очистить результаты",
   "clear_search_results": "Очистить результаты поиска",
   "click_for_changes": "Нажмите здесь, чтобы увидеть, что изменилось",
+  "click_for_other_platforms": "Нажмите здесь, если вы хотите другую платформу",
   "click_here_for_help": "Нажмите здесь, чтобы узнать больше об этом",
   "click_here_to_enable": "Нажмите здесь, чтобы включить.",
+  "click_to_apply": "Нажмите, чтобы применить",
   "click_to_claim": "Нажмите здесь, чтобы получить бесплатный взрыв.",
+  "click_to_refresh": "Нажмите, чтобы обновить",
   "close": "Закрыть",
   "comment": "Комментарий",
   "complete": "Завершено",
@@ -846,6 +849,7 @@
   "success_update_contact": "Контакт был успешно обновлен!",
   "success_valid_token": "Токен действителен и принадлежит учетной записи __account_link__. Он был создан  __timestamp__.",
   "suggested_fee": "Предлагаемые сборы",
+  "suggested_fee_help": "Дешевый сбор: транзакция с вероятностью 50% сделает это в одном из следующих десяти блоков. <br /> Стандартная комиссия: транзакция с шансом 50% сделает это в следующем блоке. <br /> Приоритетный платеж: сделка с шансом 90% это в следующем блоке и 99% сделать в течение следующих двух блоков.",
   "tags": "Теги",
   "tags_categories": "Теги (категории)",
   "tentative": "Предварительный",
