--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -56,7 +56,7 @@
   "application": "Uygulama",
   "arbitrary_message": "Rasgele Mesaj",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "",
+  "ask_order": "Sipariş sor",
   "ask_order_cancellation": "Sipariş iptali isteyin",
   "ask_order_id": "Sipariş ID sor",
   "ask_order_placement": "Sipariş vermek için istekte bulunun",
@@ -135,11 +135,14 @@
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
   "click_for_changes": "Neyin değiştiğini görmek için buraya tıklayın",
+  "click_for_other_platforms": "Başka bir platform istiyorsanız, buraya tıklayın",
   "click_here_for_help": "Daha fazla bilgi edinmek için buraya tıklayın.",
   "click_here_to_enable": "Etkinleştirmek için tıklatın.",
+  "click_to_apply": "Başvuru için tıklayın",
   "click_to_claim": "Ücretsiz Çekiminizi talep etmek için buraya tıklayın.",
+  "click_to_refresh": "Yenilemek için tıklayın",
   "close": "Kapat",
-  "comment": "Yorum",
+  "comment": "Yorum Yap",
   "complete": "Tamamlanmış",
   "confirm_contact_delete": "Evet, kişiyi Sil",
   "confirm_forging_start": "Katkıda bulunmayı başlatmak için onay ver ",
@@ -208,7 +211,7 @@
   "do_not_delete": "Hayır, silme",
   "domain": "domain",
   "download": "İndir",
-  "download_started": "",
+  "download_started": "İndirme başladı",
   "downloaded": "İndirilenler",
   "downloaded_hash": "İndirilen Hash",
   "downloaded_volume": "İndirilen Hacim",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kişi Başarıyla Güncelleştirildi!",
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
   "suggested_fee": "Önerilen ücretleri",
+  "suggested_fee_help": "Ucuz ücret:% 50 şans işlemi sonraki on bloktan birinde yapılır. <br /> Standart ücret:% 50 şans işlemi sonraki satırda yapılır. <br /> Öncelik ücreti:% 90 şans işlemi yapılır sonraki blokta ve sonraki iki blokta% 99 yapmak için.",
   "tags": "Tags",
   "tags_categories": "Tags (categories)",
   "tentative": "Tentative",
