--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -56,7 +56,7 @@
   "application": "Aplicació",
   "arbitrary_message": "Missatge arbitrari",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ordre de Venta",
+  "ask_order": "Demana una comanda",
   "ask_order_cancellation": "Demanar la Cancel·lació de l'Ordre",
   "ask_order_id": "Demana la ID de l'Ordre de venta",
   "ask_order_placement": "Demanar  la Col·locació de l'Ordre",
@@ -135,9 +135,12 @@
   "clear_results": "Netejar Resultats",
   "clear_search_results": "Netejar Resultats de Cerca",
   "click_for_changes": "Feu clic aquí per veure què ha canviat",
+  "click_for_other_platforms": "Feu clic aquí si voleu una altra plataforma",
   "click_here_for_help": "Feu clic aquí per saber-ne més",
   "click_here_to_enable": "Feu clic aquí per habilitar-lo.",
+  "click_to_apply": "Feu clic per aplicar",
   "click_to_claim": "Feu clic aquí per reclamar la vostra explosió gratuïta.",
+  "click_to_refresh": "Feu clic per actualitzar",
   "close": "Tancar",
   "comment": "Comentari",
   "complete": "Complet",
@@ -846,6 +849,7 @@
   "success_update_contact": "El contacte s'ha actualitzat correctament!",
   "success_valid_token": "L'identificador és vàlida i pertany al compte __account_link__. S'ha generat a les __timestamp__.",
   "suggested_fee": "Tarifes suggerides",
+  "suggested_fee_help": "Tarifa barata: la transacció del 50% serà possible en un dels propers deu blocs. <br /> Tarifa estàndard: la transacció del 50% de probabilitats la farà al següent bloc. <br /> Taxa de prioritat: es farà un 90% de transacció. el següent bloc i el 99% per als següents blocs.",
   "tags": "Etiquetes",
   "tags_categories": "Etiquetes (categories)",
   "tentative": "Provisional",
