--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -56,7 +56,7 @@
   "application": "Εφαρμογή",
   "arbitrary_message": "Arbitrary Message",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Εντολή ζήτησης",
+  "ask_order": "Ρωτήστε την παραγγελία",
   "ask_order_cancellation": "ακύρωση εντολής ζητήσης",
   "ask_order_id": "Ask Order ID",
   "ask_order_placement": "Τοποθέτηση παραγγελίας",
@@ -135,9 +135,12 @@
   "clear_results": "Διαγραφή αποτελέσματων",
   "clear_search_results": "διαγραφή αποτελεσμάτων αναζήτησης",
   "click_for_changes": "Κάντε κλικ εδώ για να δείτε τι άλλαξε",
+  "click_for_other_platforms": "Κάντε κλικ εδώ, εάν θέλετε μια άλλη πλατφόρμα",
   "click_here_for_help": "Κάντε κλικ εδώ για να μάθετε περισσότερα για αυτό",
   "click_here_to_enable": "Κάντε κλικ εδώ για να το ενεργοποιήσετε.",
+  "click_to_apply": "Κάντε κλικ για να υποβάλετε αίτηση",
   "click_to_claim": "Κάντε κλικ εδώ για να διεκδικήσετε τη δωρεάν έκρηξη.",
+  "click_to_refresh": "Κάντε κλικ για ανανέωση",
   "close": "Κλείσιμο",
   "comment": "Σχόλιο",
   "complete": "Ολοκλήρωση",
@@ -846,6 +849,7 @@
   "success_update_contact": "Η επαφή έχει ενημερωθεί με επιτυχία!",
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
   "suggested_fee": "Προτεινόμενες αμοιβές",
+  "suggested_fee_help": "Φτηνές χρεώσεις: 50% πιθανότητα συναλλαγής θα γίνει σε ένα από τα επόμενα δέκα τετράγωνα. <br /> Τυπική αμοιβή: 50% πιθανή συναλλαγή θα γίνει στο επόμενο τετράγωνο. <br /> Τέλος προτεραιότητας: 90% τυχαία συναλλαγή θα κάνει στο επόμενο μπλοκ και 99% στο επόμενο τετράγωνο.",
   "tags": "Ετικέτες",
   "tags_categories": "Tags (categories)",
   "tentative": "Αβέβαιο",
