--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -56,7 +56,7 @@
   "application": "Aplicación",
   "arbitrary_message": "Mensaxe arbitrario",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Orde de venda",
+  "ask_order": "Pregunta por orde",
   "ask_order_cancellation": "Cancelar Orde de Venda",
   "ask_order_id": "ID de orde de venda",
   "ask_order_placement": "Colocar orde de venda",
@@ -135,9 +135,12 @@
   "clear_results": "Clear Results",
   "clear_search_results": "Limpar resultados de búsqueda",
   "click_for_changes": "Fai clic aquí para ver o que cambiou",
+  "click_for_other_platforms": "Fai clic aquí, se queres outra plataforma",
   "click_here_for_help": "Fai clic aquí para saber máis sobre el",
   "click_here_to_enable": "Faga clic aquí para activalo.",
+  "click_to_apply": "Fai clic para aplicar",
   "click_to_claim": "Fai clic aquí para reclamar a explosión gratuíta.",
+  "click_to_refresh": "Fai clic para actualizar",
   "close": "Close",
   "comment": "Comentario",
   "complete": "Completo",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontakt je uspješno izmijenjen!",
   "success_valid_token": "O identificador é válido e pertence á conta __account_link__. Foi xerado en __timestamp__.",
   "suggested_fee": "Tarifas suxeridas",
+  "suggested_fee_help": "Tarifa barata: a transacción do 50% de posibilidades farase nun dos próximos dez bloques. <br /> Tarifa estándar: a transacción do 50% de posibilidades farase no seguinte bloque. <br /> Tarifa de prioridade: fará un 90% de transaccións por casualidade no seguinte bloque e un 99% dentro dos próximos dous bloques.",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
