--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -56,7 +56,7 @@
   "application": "Aplicativo",
   "arbitrary_message": "Mensagem Arbitrária",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ordens de Venda",
+  "ask_order": "Peça ordem",
   "ask_order_cancellation": "Cancelar Ordem de Venda",
   "ask_order_id": "ID de Ordem de Venda",
   "ask_order_placement": "Colocar Ordem de Venda",
@@ -135,11 +135,14 @@
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar Resultado de Pesquisa",
   "click_for_changes": "Clique aqui para ver o que mudou",
+  "click_for_other_platforms": "Clique aqui, se você quiser outra plataforma",
   "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
+  "click_to_apply": "Clique para aplicar",
   "click_to_claim": "Clique aqui para ganhar seu Burst grátis.",
+  "click_to_refresh": "Clique para atualizar",
   "close": "Fechar",
-  "comment": "Comentário",
+  "comment": "Comente",
   "complete": "Completo",
   "confirm_contact_delete": "Sim, Apagar Contato",
   "confirm_forging_start": "Confirmar o Início do Forjamento",
@@ -846,6 +849,7 @@
   "success_update_contact": "O contato atualizou-se com sucesso!",
   "success_valid_token": "O identificador é válido e pertence à conta __account_link__. Foi gerado em __timestamp__.",
   "suggested_fee": "Taxas sugeridas",
+  "suggested_fee_help": "Taxa barata: 50% de chance de transação em um dos próximos dez blocos. <br /> Taxa padrão: 50% de chance de transação no próximo bloco. <br /> Taxa de prioridade: 90% de chance de transação no próximo bloco e 99% para fazer dentro dos próximos dois blocos.",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
