--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -56,7 +56,7 @@
   "application": "Апликација",
   "arbitrary_message": "Произвољна Порука",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Тражите Поруџбину",
+  "ask_order": "Аск Ордер",
   "ask_order_cancellation": "Статус",
   "ask_order_id": "Тражи ID Поруџбине",
   "ask_order_placement": "Позиција Тражене Поруџбине",
@@ -135,11 +135,14 @@
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
   "click_for_changes": "Кликните овде да видите шта се променило",
+  "click_for_other_platforms": "Кликните овде, ако желите другу платформу",
   "click_here_for_help": "Кликните овде да бисте сазнали више о томе",
   "click_here_to_enable": "Кликните овде да га омогућите.",
+  "click_to_apply": "Кликните да бисте се пријавили",
   "click_to_claim": "Кликните овде да бисте затражили ваш бесплатни Бурст.",
+  "click_to_refresh": "Кликните да бисте освежили",
   "close": "Затвори",
-  "comment": "Коментариши",
+  "comment": "Коментар",
   "complete": "Завршено",
   "confirm_contact_delete": "Да, обришите контакт",
   "confirm_forging_start": "Потврдите Почетак Ковања",
@@ -846,6 +849,7 @@
   "success_update_contact": "Контакт је успешно ажуриран!",
   "success_valid_token": "Токен је валидан и припада налогу __аccount_link__. Генерисан је у __timestamp__.",
   "suggested_fee": "Предложене накнаде",
+  "suggested_fee_help": "Јефтина накнада: 50% шанса за трансакцију ће се остварити у једном од следећих десет блокова. <бр /> Стандардна накнада: 50% шанса за трансакцију ће се извршити у следећем блоку. у наредном блоку и 99% у наредна два блока.",
   "tags": "Ознаке",
   "tags_categories": "Ознаке (категорије)",
   "tentative": "Привремени",
