--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -56,7 +56,7 @@
   "application": "应用程序",
   "arbitrary_message": "任意信息",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "卖单",
+  "ask_order": "询问订单",
   "ask_order_cancellation": "卖单取消",
   "ask_order_id": "卖单 ID",
   "ask_order_placement": "卖单委托",
@@ -135,9 +135,12 @@
   "clear_results": "清除结果",
   "clear_search_results": "清除搜索结果",
   "click_for_changes": "点击此处查看更改内容",
+  "click_for_other_platforms": "如果您想要其他平台，请单击此处",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "点击此处启用它。",
+  "click_to_apply": "点击申请",
   "click_to_claim": "点击此处声明您的免费Burst。",
+  "click_to_refresh": "点击刷新",
   "close": "关闭",
   "comment": "评论",
   "complete": "完成",
@@ -208,7 +211,7 @@
   "do_not_delete": "不，不要删除",
   "domain": "域",
   "download": "下载",
-  "download_started": "",
+  "download_started": "下载开始了",
   "downloaded": "已下载",
   "downloaded_hash": "已下载的哈希",
   "downloaded_volume": "下载量",
@@ -846,6 +849,7 @@
   "success_update_contact": "联系人已更新成功 ！",
   "success_valid_token": "令牌是有效的，属于帐户 __account_link__。它产生于 __timestamp__ 。",
   "suggested_fee": "建议的费用",
+  "suggested_fee_help": "便宜的费用：50％的交易将在下一个十个区块之一进行交易。<br />标准费用：50％的交易将在下一个区块进行交易。<br />优先费：90％的交易机会将使它在下一个区块中，99％在接下来的两个区块内完成。",
   "tags": "标签",
   "tags_categories": "标签 （类别）",
   "tentative": "暂定",
